using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimatorNames
{
    public static string ENEMYDISTANCEFROMPLAYER = "distanceFromPlayer";
    public static string ENEMYTAKEDAMAGE = "takeDamage";
    public static string ENEMYDIE = "Die";
    public static string PLAYERSPEED = "speed";
    public static string PLAYERATTACK = "Attack";
    public static string PLAYERPARRY = "Parry";
    public static string PLAYERTAKEDAMAGE = "TakeDamage";
    public static string PLAYERDIE = "Die";
}
